force-app/main/default/objects/Account/fields/A_os__c.field-meta.xml
<CustomField>
    <fullName>A_os__c</fullName>
    <label>Años</label>
    <length>100</length>
    <type>Text</type>
</CustomField>