force-app/main/default/objects/Account/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>IF(
NOT(ISBLANK(Dealer_Code__c)),
Dealer_Code__c,
IF(
NOT(ISBLANK(Fleet_Code__c)),
Fleet_Code__c,
Vendor_Code__c))</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>