force-app/main/default/objects/Account/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <formula>IF(
NOT ISNULL(Group_Code__c),
Group_Code__c,
Fleet_Group_Code__c)</formula>
    <label>Account Group</label>
    <type>Text</type>
</CustomField>