force-app/main/default/objects/Account/fields/Achieved_OSS_Goal__c.field-meta.xml
<CustomField>
    <fullName>Achieved_OSS_Goal__c</fullName>
    <formula>Current_of_Outside_Sales_Staff__c / MX_OSS_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved OSS Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>