force-app/main/default/objects/Account/fields/Achieved_Registered_Fleets__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Registered_Fleets__c</fullName>
    <formula>Current_of_Registered_Fleets_Dlr_Grp__c/Fleet_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Registered Fleets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>