force-app/main/default/objects/Account/fields/Activo_en_Reto_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Activo_en_Reto_de_Ventas__c</fullName>
    <label>Activo en Reto de Ventas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>