force-app/main/default/objects/Account/fields/Actual_Results__c.field-meta.xml
<CustomField>
    <fullName>Actual_Results__c</fullName>
    <label>Actual Results</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>