force-app/main/default/objects/Account/fields/After_Hours_Service__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Hours Service</label>
    <type>Checkbox</type>
</CustomField>