force-app/main/default/objects/Account/fields/Agreement_Years__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Years__c</fullName>
    <label>Agreement Years</label>
    <length>25</length>
    <type>Text</type>
</CustomField>