force-app/main/default/objects/Account/fields/All_PY_Purchases__c.field-meta.xml
<CustomField>
    <fullName>All_PY_Purchases__c</fullName>
    <label>All PY Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>