force-app/main/default/objects/Account/fields/Alt_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone_No__c</fullName>
    <description>Alternate Phone Number for the account</description>
    <label>Alt Phone #</label>
    <type>Phone</type>
</CustomField>