force-app/main/default/objects/Account/fields/Alt_Phone_No_E164__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone_No_E164__c</fullName>
    <formula>RIGHT(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(Alt_Phone_No__c, &apos;-&apos;, &apos;&apos;), 
        &apos;)&apos;, &apos;&apos;),
      &apos;(&apos;, &apos;&apos;),
    &apos; &apos;, &apos;&apos;), 
  &apos;.&apos;, &apos;&apos;), 
10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alt_Phone_No_E164</label>
    <type>Text</type>
</CustomField>