force-app/main/default/objects/Account/fields/Approval_Special_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Approval_Special_Arrangements__c</fullName>
    <inlineHelpText>Not Roadside</inlineHelpText>
    <label>Approval/Special Arrangements</label>
    <type>TextArea</type>
</CustomField>