force-app/main/default/objects/Account/fields/AS400_Customer_Instruction__c.field-meta.xml
<CustomField>
    <fullName>AS400_Customer_Instruction__c</fullName>
    <description>Fields in AS400 for Account</description>
    <label>AS400 Customer Instruction</label>
    <type>TextArea</type>
</CustomField>