force-app/main/default/objects/Account/fields/Attainment_to_Track_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>Attainment_to_Track_to_Goal__c</fullName>
    <formula>Business_Days_Passed__c /65</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Attainment to Track to Goal</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>