force-app/main/default/objects/Account/fields/AU_CURMTD21M__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTD21M__c</fullName>
    <label>AU_CURMTD21M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>