force-app/main/default/objects/Account/fields/AU_CURMTDDF__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDDF__c</fullName>
    <label>AU_CURMTDDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>