force-app/main/default/objects/Account/fields/AU_CURMTDEN__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDEN__c</fullName>
    <label>AU_CURMTDEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>