force-app/main/default/objects/Account/fields/AU_CURMTDMX__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDMX__c</fullName>
    <label>AU_CURMTDMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>