force-app/main/default/objects/Account/fields/AU_CURMTDPGE__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDPGE__c</fullName>
    <label>AU_CURMTDPGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>