force-app/main/default/objects/Account/fields/AU_CURMTDTP__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDTP__c</fullName>
    <label>AU_CURMTDTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>