force-app/main/default/objects/Account/fields/AU_CURMTDTRL__c.field-meta.xml
<CustomField>
    <fullName>AU_CURMTDTRL__c</fullName>
    <label>AU_CURMTDTRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>