force-app/main/default/objects/Account/fields/AU_CURYTD21M__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTD21M__c</fullName>
    <label>AU_CURYTD21M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>