force-app/main/default/objects/Account/fields/AU_CURYTD__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTD__c</fullName>
    <label>AU_CURYTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>