force-app/main/default/objects/Account/fields/AU_CURYTDDF__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDDF__c</fullName>
    <label>AU_CURYTDDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>