force-app/main/default/objects/Account/fields/AU_CURYTDEN__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDEN__c</fullName>
    <label>AU_CURYTDEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>