force-app/main/default/objects/Account/fields/AU_CURYTDMX__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDMX__c</fullName>
    <label>AU_CURYTDMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>