force-app/main/default/objects/Account/fields/AU_CURYTDPGE__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDPGE__c</fullName>
    <label>AU_CURYTDPGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>