force-app/main/default/objects/Account/fields/AU_CURYTDTP__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDTP__c</fullName>
    <label>AU_CURYTDTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>