force-app/main/default/objects/Account/fields/AU_CURYTDTRL__c.field-meta.xml
<CustomField>
    <fullName>AU_CURYTDTRL__c</fullName>
    <label>AU_CURYTDTRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>