force-app/main/default/objects/Account/fields/AU_PRVMTD__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTD__c</fullName>
    <label>AU_PRVMTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>