force-app/main/default/objects/Account/fields/AU_PRVMTDDF__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDDF__c</fullName>
    <label>AU_PRVMTDDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>