force-app/main/default/objects/Account/fields/AU_PRVMTDEN__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDEN__c</fullName>
    <label>AU_PRVMTDEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>