force-app/main/default/objects/Account/fields/AU_PRVMTDMX__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDMX__c</fullName>
    <label>AU_PRVMTDMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>