force-app/main/default/objects/Account/fields/AU_PRVMTDPGE__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDPGE__c</fullName>
    <label>AU_PRVMTDPGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>