force-app/main/default/objects/Account/fields/AU_PRVMTDTP__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDTP__c</fullName>
    <label>AU_PRVMTDTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>