force-app/main/default/objects/Account/fields/AU_PRVMTDTRL__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVMTDTRL__c</fullName>
    <label>AU_PRVMTDTRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>