force-app/main/default/objects/Account/fields/AU_PRVYTDDF__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDDF__c</fullName>
    <label>AU_PRVYTDDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>