force-app/main/default/objects/Account/fields/AU_PRVYTDEN__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDEN__c</fullName>
    <label>AU_PRVYTDEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>