force-app/main/default/objects/Account/fields/AU_PRVYTDMX__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDMX__c</fullName>
    <label>AU_PRVYTDMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>