force-app/main/default/objects/Account/fields/AU_PRVYTDPGE__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDPGE__c</fullName>
    <label>AU_PRVYTDPGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>