force-app/main/default/objects/Account/fields/AU_PRVYTDTP__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDTP__c</fullName>
    <label>AU_PRVYTDTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>