force-app/main/default/objects/Account/fields/AU_PRVYTDTRL__c.field-meta.xml
<CustomField>
    <fullName>AU_PRVYTDTRL__c</fullName>
    <label>AU_PRVYTDTRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>