force-app/main/default/objects/Account/fields/Authorizations__c.field-meta.xml
<CustomField>
    <fullName>Authorizations__c</fullName>
    <description>Profiles notes authorizations information for Account</description>
    <label>Authorizations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>