force-app/main/default/objects/Account/fields/Auto_Replenish__c.field-meta.xml
<CustomField>
    <fullName>Auto_Replenish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Replenish</label>
    <type>Checkbox</type>
</CustomField>