force-app/main/default/objects/Account/fields/Automann_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Automann_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automann Toggle</label>
    <type>Checkbox</type>
</CustomField>