force-app/main/default/objects/Account/fields/Base_Line__c.field-meta.xml
<CustomField>
    <fullName>Base_Line__c</fullName>
    <label>Base Line</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>