force-app/main/default/objects/Account/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <label>Baseline</label>
    <length>25</length>
    <type>Text</type>
</CustomField>