force-app/main/default/objects/Account/fields/Best_in_Class__c.field-meta.xml
<CustomField>
    <fullName>Best_in_Class__c</fullName>
    <label>Best in Class</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>