force-app/main/default/objects/Account/fields/Billing_Division__c.field-meta.xml
<CustomField>
    <fullName>Billing_Division__c</fullName>
    <label>Billing Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kenworth</fullName>
            </value>
            <value>
                <fullName>PACCAR</fullName>
            </value>
            <value>
                <fullName>Peterbilt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>