force-app/main/default/objects/Account/fields/Billing_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Longitude__c</fullName>
    <formula>BillingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Longitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>