force-app/main/default/objects/Account/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO from Dealer</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PPFS Instant Reimbursement</fullName>
            </value>
            <value>
                <fullName>Instant Reimbursement</fullName>
            </value>
            <value>
                <fullName>PPFS (KW &amp; PB Fleet)</fullName>
            </value>
            <value>
                <fullName>PPFS Standard Payment</fullName>
            </value>
            <value>
                <fullName>Standard Payment</fullName>
            </value>
            <value>
                <fullName>Pending EFT</fullName>
            </value>
            <value>
                <fullName>PPFS EFT</fullName>
            </value>
            <value>
                <fullName>PPFS Hard Check</fullName>
            </value>
            <value>
                <fullName>Customer Pay Direct</fullName>
            </value>
            <value>
                <fullName>Access Account</fullName>
            </value>
            <value>
                <fullName>Warranty/Other</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>80% Credit Hold</fullName>
            </value>
            <value>
                <fullName>PPFS (GOP)</fullName>
            </value>
            <value>
                <fullName>KW &amp; PB Fleet Acct (Cust Pay)</fullName>
            </value>
            <value>
                <fullName>Customer Pays Directly at ISPs and Dealers</fullName>
            </value>
            <value>
                <fullName>Fleet Account where PCC Pays ISPs and issues PO at Dealers</fullName>
            </value>
            <value>
                <fullName>Fleet Account where PCC Pays ISPs and Customer issues PO at Dealers</fullName>
            </value>
            <value>
                <fullName>Fleet Account where Customer Pays ISPs and issues PO at Dealers</fullName>
            </value>
            <value>
                <fullName>Virtual Credit Card</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Credit Card Over the Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>