force-app/main/default/objects/Account/fields/Billing_Program__c.field-meta.xml
<CustomField>
    <fullName>Billing_Program__c</fullName>
    <label>Billing Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>