force-app/main/default/objects/Account/fields/Breakeven_Point__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Point__c</fullName>
    <label>Breakeven Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>