force-app/main/default/objects/Account/fields/BSM_Email__c.field-meta.xml
<CustomField>
    <fullName>BSM_Email__c</fullName>
    <label>BSM Email</label>
    <type>Email</type>
</CustomField>