force-app/main/default/objects/Account/fields/Buses__c.field-meta.xml
<CustomField>
    <fullName>Buses__c</fullName>
    <inlineHelpText>Enter the amount of buses the account owns</inlineHelpText>
    <label>Buses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>