force-app/main/default/objects/Account/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <formula>(ABS(Date(2017,1,6) -Today())/7)*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>