force-app/main/default/objects/Account/fields/Business_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Left__c</fullName>
    <formula>253 -  Business_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>