force-app/main/default/objects/Account/fields/Business_Days_Passed__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Passed__c</fullName>
    <formula>(ABS(Date(2012,1,3) -Today())/7)*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>