force-app/main/default/objects/Account/fields/Business_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BSM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>