force-app/main/default/objects/Account/fields/Buying_from_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Buying_from_Competitor__c</fullName>
    <description>Is this dealer group buying in bulk from a competitor?</description>
    <label>Buying from Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>