force-app/main/default/objects/Account/fields/C6__c.field-meta.xml
<CustomField>
    <fullName>C6__c</fullName>
    <label>Clase 6 KW</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>