force-app/main/default/objects/Account/fields/C6N__c.field-meta.xml
<CustomField>
    <fullName>C6N__c</fullName>
    <label>Clase 6 NO KW</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>