force-app/main/default/objects/Account/fields/C87KW__c.field-meta.xml
<CustomField>
    <fullName>C87KW__c</fullName>
    <label>Clase 8&amp;7 KW</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>