force-app/main/default/objects/Account/fields/Capacity_for_Trailer_Load__c.field-meta.xml
<CustomField>
    <fullName>Capacity_for_Trailer_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the dealer group have capacity for a full trailer load?</description>
    <label>Capacity for Trailer Load</label>
    <type>Checkbox</type>
</CustomField>