force-app/main/default/objects/Account/fields/Centralized_Billing__c.field-meta.xml
<CustomField>
    <fullName>Centralized_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Customer using centralized billing</description>
    <label>Centralized Billing</label>
    <type>Checkbox</type>
</CustomField>