force-app/main/default/objects/Account/fields/Centralized_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Centralized_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is customer using centralized ordering</description>
    <label>Centralized Ordering</label>
    <type>Checkbox</type>
</CustomField>