force-app/main/default/objects/Account/fields/Chevron_Target__c.field-meta.xml
<CustomField>
    <fullName>Chevron_Target__c</fullName>
    <label>Chevron Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>