force-app/main/default/objects/Account/fields/Class_6_7_Oil_Coolant__c.field-meta.xml
<CustomField>
    <fullName>Class_6_7_Oil_Coolant__c</fullName>
    <formula>Class_6_7_Total__c *415</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation is based on number of Class: 6-7 Trucks x $415</inlineHelpText>
    <label>Class 6-7: Oil Coolant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>