force-app/main/default/objects/Account/fields/Class_6_7_Other__c.field-meta.xml
<CustomField>
    <fullName>Class_6_7_Other__c</fullName>
    <label>Class 6-7: Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>