force-app/main/default/objects/Account/fields/Class_6_7_Volvo__c.field-meta.xml
<CustomField>
    <fullName>Class_6_7_Volvo__c</fullName>
    <label>Class 6-7: Volvo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>